Version 1.3.2
=============
- added support imports clients from a file

Version 1.3.1
=============
- added setup.py
- added changelog